force-app/main/default/objects/NCMT_Building_Massing_By_Floor__c/NCMT_Building_Massing_By_Floor__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <description>For Project Level Parameters</description>
    <label>Building Massing By Floor</label>
    <nameField>
        <displayFormat>BMF-{00000}</displayFormat>
        <label>Building Massing By Floor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Building Massing By Floors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>