force-app/main/default/objects/NCMT_Building_Massing_By_Floor__c/fields/Building_Massing_Area__c.field-meta.xml
<CustomField>
    <fullName>Building_Massing_Area__c</fullName>
    <label>Building Massing Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>