force-app/main/default/objects/NCMT_Building_Massing_By_Floor__c/fields/Default_Skylights_SF__c.field-meta.xml
<CustomField>
    <fullName>Default_Skylights_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Skylights SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>