force-app/main/default/objects/NCMT_Building_Massing_By_Floor__c/fields/NCMT_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project_ID__c</fullName>
    <formula>CASESAFEID(Proj_Level_Parameter__r.NCMT_Project__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMT Project ID</label>
    <type>Text</type>
</CustomField>