force-app/main/default/objects/NCMT_Building_Massing_By_Floor__c/fields/Proj_Level_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Proj_Level_Parameter__c</fullName>
    <label>Proj Level Parameter</label>
    <referenceTo>Project_Level_Parameter__c</referenceTo>
    <relationshipLabel>Building Massing By Floors</relationshipLabel>
    <relationshipName>Building_Massing_By_Floors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>