force-app/main/default/objects/NCMT_Building_Massing_By_Floor__c/fields/Use_Area_SF__c.field-meta.xml
<CustomField>
    <fullName>Use_Area_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Use Area SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>